# ChangeLog for dev-db/pgadmin3
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/pgadmin3/ChangeLog,v 1.86 2012/09/12 13:47:33 johu Exp $

  12 Sep 2012; Johannes Huber <johu@gentoo.org> pgadmin3-1.14.3.ebuild:
  Stable for x86, wrt bug #428924

  15 Aug 2012; Anthony G. Basile <blueness@gentoo.org> pgadmin3-1.14.3.ebuild:
  Stable ppc, bug #428924

  04 Aug 2012; Markos Chandras <hwoarang@gentoo.org> pgadmin3-1.14.3.ebuild:
  Stable on amd64 wrt bug #428924

*pgadmin3-1.14.3 (07 Jun 2012)

  07 Jun 2012; Aaron W. Swenson <titanofold@gentoo.org>
  +pgadmin3-1.14.3.ebuild:
  Version bump.

  19 Apr 2012; Aaron W. Swenson <titanofold@gentoo.org>
  -pgadmin3-1.12.2.ebuild, -pgadmin3-1.12.3.ebuild, -pgadmin3-1.12.3-r1.ebuild,
  -pgadmin3-1.14.0.ebuild, -pgadmin3-1.14.1.ebuild, -pgadmin3-1.14.1-r1.ebuild:
  Cleaning out old versions.

  16 Apr 2012; Brent Baude <ranger@gentoo.org> pgadmin3-1.14.2.ebuild:
  Marking pgadmin3-1.14.2 ppc for bug 394447

  05 Apr 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pgadmin3-1.14.2.ebuild:
  x86 stable wrt bug #394447

  05 Apr 2012; Agostino Sarubbo <ago@gentoo.org> pgadmin3-1.14.2.ebuild:
  Stable for amd64, wrt bug #394447

  06 Mar 2012; Brent Baude <ranger@gentoo.org> pgadmin3-1.14.1-r1.ebuild:
  Marking pgadmin3-1.14.1-r1 ppc for bug 394447

  02 Mar 2012; Agostino Sarubbo <ago@gentoo.org> pgadmin3-1.14.1-r1.ebuild:
  Stable for amd64, wrt bug #394447

*pgadmin3-1.14.2 (01 Mar 2012)

  01 Mar 2012; Aaron W. Swenson <titanofold@gentoo.org>
  +pgadmin3-1.14.2.ebuild:
  Version bump.

  21 Feb 2012; Aaron W. Swenson <titanofold@gentoo.org>
  pgadmin3-1.12.3-r1.ebuild, pgadmin3-1.14.0.ebuild, pgadmin3-1.14.1.ebuild,
  pgadmin3-1.14.1-r1.ebuild:
  Changed LICENSE from 'Artistic' to 'POSTGRESQL' fixing bug 373841.

  05 Feb 2012; Raúl Porcel <armin76@gentoo.org> pgadmin3-1.12.2.ebuild,
  pgadmin3-1.12.3.ebuild, pgadmin3-1.12.3-r1.ebuild, pgadmin3-1.14.0.ebuild,