@@ -1,6 +1,17 @@
 # ChangeLog for dev-db/pgadmin3
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/pgadmin3/ChangeLog,v 1.86 2012/09/12 13:47:33 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/pgadmin3/ChangeLog,v 1.88 2012/12/13 09:55:34 patrick Exp $
+
+*pgadmin3-1.16.1 (13 Dec 2012)
+
+  13 Dec 2012; Patrick Lauer <patrick@gentoo.org> +pgadmin3-1.16.1.ebuild,
+  metadata.xml:
+  Bump for #447074
+
+*pgadmin3-1.16.0 (08 Nov 2012)
+
+  08 Nov 2012; <titan@gentoo.org> +pgadmin3-1.16.0.ebuild:
+  Version bump fixes bug 434994.
 
   12 Sep 2012; Johannes Huber <johu@gentoo.org> pgadmin3-1.14.3.ebuild:
   Stable for x86, wrt bug #428924
